# running-coach

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  implementation-roadmap.md  pyproject.toml  running-coach-prd.md
.github/workflows/: test.yaml
auth/: __init__.py  credentials.py
cli/: main.py
data/vector_store/: base.py  local.py
llm/: base.py  gemini.py
llm/prompts/: __init__.py  utils.py
llm/prompts/templates/: __init__.py  analysis.py  planning.py
tests/test_data/: test_prompts.py  test_vector_store.py
utils/: logging.py
