[project]
name = "running-coach"
version = "0.1.0"
description = "AI Running Coach - Personalized training assistance powered by AI"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "chromadb",          # Vector storage
    "google-generativeai", # Gemini API
    "stravalib",         # Strava API client
    "typer[all]",        # CLI framework
    "pydantic>=2.0.0",   # Data validation
]

[project.optional-dependencies]
# Dependencies only needed for development
dev = [
    "pytest",           # Testing framework
    "black",            # Code formatter
    "isort",           # Import sorter
    "mypy",            # Type checker
    "pre-commit"       # Git hooks manager
]

# This section defines the CLI entry point
[project.scripts]
running-coach = "running_coach.cli.main:app"  # Command = module:function

# This section tells pip how to build your package
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["running_coach"]

# Tool-specific configurations
[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"  # Make isort compatible with black
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
